projects/api/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
  - port: 3000
